# android-cuttlefish

base/cvd/: BUILD.bazel  MODULE.bazel
base/cvd/allocd/: alloc_utils.cpp  alloc_utils.h
base/cvd/build_external/jsoncpp/: PATCH.jsoncpp.bazel9.patch
base/cvd/cuttlefish/common/libs/concurrency/: BUILD.bazel
base/cvd/cuttlefish/common/libs/fs/: BUILD.bazel  shared_fd.cpp  shared_fd.h
base/cvd/cuttlefish/common/libs/key_equals_value/: BUILD.bazel
base/cvd/cuttlefish/common/libs/utils/: BUILD.bazel  files.cpp  files_test.cpp  subprocess.cpp  subprocess_managed_stdio.h  unix_sockets.cpp
base/cvd/cuttlefish/host/commands/assemble_cvd/: BUILD.bazel  alloc.cc  alloc.h  assemble_cvd.cc  assemble_cvd_flags.cpp  assemble_cvd_flags.h  flags.cc  flags.h  flags_defaults.h
base/cvd/cuttlefish/host/commands/assemble_cvd/flags/: BUILD.bazel  use_cvdalloc.cc  use_cvdalloc.h
base/cvd/cuttlefish/host/commands/context_server/: BUILD.bazel  context.proto  main.cpp
base/cvd/cuttlefish/host/commands/cvd/: main.cc
base/cvd/cuttlefish/host/commands/cvd/cli/commands/: create.cpp  reset.cpp  start.cpp
base/cvd/cuttlefish/host/commands/cvd/cli/selector/: creation_analyzer.cpp  creation_analyzer.h
base/cvd/cuttlefish/host/commands/cvd/instances/lock/: instance_lock.cpp  instance_lock.h
base/cvd/cuttlefish/host/commands/cvd/utils/: common.cpp  common.h
base/cvd/cuttlefish/host/commands/cvdalloc/: BUILD.bazel  cvdalloc.cpp  cvdalloc.h  interface.h  privilege.cpp  privilege.h  sem.cpp  sem.h
base/cvd/cuttlefish/host/commands/defaults/: defaults.cpp
base/cvd/cuttlefish/host/commands/process_sandboxer/: policies.cpp  policies.h
base/cvd/cuttlefish/host/commands/process_sandboxer/policies/: BUILD.bazel  context_server.cpp  run_cvd.cpp
base/cvd/cuttlefish/host/commands/run_cvd/: BUILD.bazel  main.cc  server_loop_impl.cpp
base/cvd/cuttlefish/host/commands/run_cvd/launch/: BUILD.bazel  context_server.cpp  context_server.h  cvdalloc.cpp  cvdalloc.h  open_wrt.cpp
base/cvd/cuttlefish/host/commands/start/: main.cc
base/cvd/cuttlefish/host/commands/stop/: main.cc
base/cvd/cuttlefish/host/libs/config/: cuttlefish_config.h  cuttlefish_config_instance.cpp  known_paths.cpp  known_paths.h
base/cvd/cuttlefish/host/libs/directories/: BUILD.bazel
base/cvd/cuttlefish/package/: BUILD.bazel
base/cvd/cuttlefish/posix/: BUILD.bazel
base/cvd/cuttlefish/result/: BUILD.bazel
base/cvd/libbase/: file.cpp  logging.cpp
base/debian/: control  cuttlefish-integration.cuttlefish-defaults.init  cuttlefish-integration.install  rules
tools/baseimage/pkg/gce/: gce.go
tools/baseimage/pkg/gce/scripts/: create_base_image_main.sh
