###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "abseil-cpp", version = "20250814.0")
bazel_dep(name = "fmt", version = "11.2.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "libuuid", version = "2.41.2")
bazel_dep(name = "libxml2", version = "2.13.5")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "boringssl", version = "0.20241024.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "xz", version = "5.4.5.bcr.7")
bazel_dep(name = "rules_m4", version = "0.3")
bazel_dep(name = "libzip", version = "1.10.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")

git_override(
    module_name = "jsoncpp",
    commit = "b511d9e64956db998b74909df112ac8c8f41d6ff",
    remote = "https://github.com/open-source-parsers/jsoncpp",
    patch_strip = 1,
    patches = [
        "@//build_external/jsoncpp:PATCH.jsoncpp.bazel9.patch",
    ],
)
