load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cc_library(
    name = "strerror",
    srcs = ["strerror.cc"],
    hdrs = ["strerror.h"],
    deps = [
        "@abseil-cpp//absl/status",
    ],
)

cc_library(
    name = "symlink",
    srcs = ["symlink.cc"],
    hdrs = ["symlink.h"],
    deps = [
        "//cuttlefish/posix:strerror",
        "//cuttlefish/result",
    ],
)
