load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cc_library(
    name = "concurrency",
    hdrs = [
        "multiplexer.h",
        "semaphore.h",
        "thread_safe_queue.h",
    ],
    deps = ["@abseil-cpp//absl/log:check"],
)
