load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cc_library(
    name = "key_equals_value",
    srcs = ["key_equals_value.cc"],
    hdrs = ["key_equals_value.h"],
    deps = [
        "//cuttlefish/common/libs/fs",
        "//cuttlefish/common/libs/utils:contains",
        "//cuttlefish/result",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "key_equals_value_test",
    srcs = ["key_equals_value_test.cc"],
    deps = [
        "//cuttlefish/common/libs/key_equals_value",
        "//cuttlefish/result",
        "//cuttlefish/result:result_matchers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
