load("//cuttlefish/bazel:rules.bzl", "cf_cc_binary", "cf_cc_library")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cf_cc_binary(
    name = "cvdalloc",
    srcs = [
        "cvdalloc.cpp",
    ],
    deps = [
        "//cuttlefish/common/libs/fs",
        "//libbase",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)
