load("//cuttlefish/bazel:rules.bzl", "cf_cc_binary", "cf_cc_library")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cf_cc_library(
    name = "interface",
    hdrs = ["interface.h"],
    srcs = [
        "interface.cpp",
    ],
    deps = [
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cf_cc_binary(
    name = "cvdalloc",
    srcs = [
        "cvdalloc.cpp",
        "privilege.h",
        "privilege.cpp",
    ],
    deps = [
        ":interface",
        "//allocd:alloc_utils",
        "//cuttlefish/common/libs/fs",
        "//libbase",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
