load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cc_library(
    name = "directories",
    srcs = [
        "xdg.cpp",
    ],
    hdrs = [
        "xdg.h",
    ],
    deps = [
        "//cuttlefish/common/libs/fs",
        "//cuttlefish/common/libs/utils:environment",
        "//cuttlefish/common/libs/utils:files",
        "//cuttlefish/common/libs/utils:users",
        "//cuttlefish/posix:strerror",
        "//cuttlefish/result",
        "//libbase",
    ],
)
